--- a/src/App/App.css
+++ b/src/App/App.css
@@ -10,7 +10,7 @@
   align-items: center;
   background-image: url('../assets/cafe-img.jpeg');
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
