Fit content for laptop view - post-assessment

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -5,7 +5,7 @@
   border: 4px solid teal;
   background-color: seashell;
   color: teal;
-  font-size: 1.5rem;
+  font-size: 2.5vh;
 }
 
 .name {
@@ -18,7 +18,7 @@ button {
   background-color: teal;
   color: seashell;
   border: 1px solid seashell;
-  font-size: 1.25rem;
+  font-size: 2.2vh;
 }
 
 button:hover {
